# prefect

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README_部署说明.md  add_indexes.sql  analyze_performance.py  check_results.py  check_results2.py  check_schema.py  check_source_data.py  check_source_data2.py  deploy_local.py  deploy_production.py  deploy_to_server.py  prefect-server.service.example  prefect-service.conf.example  prefect-workers.service.example  prefect.service.example  requirements.txt  run_workers_on_server.sh  setup-prefect-service.sh  test_flow.py  使用说明.txt  复制文件.py  浏览器无法访问Prefect_立即修复.md
docs/: Git同步后服务器上推送流程到Prefect.md  Prefect_Rocky_Linux_部署指南.md  多项目共用mypackage_打包与使用.md  服务器上执行flow说明.md  服务器上配置mypackage依赖.md  自动git_pull与推送流程.md
docs/mypackage-packaging-template/: README.md  pyproject.toml  setup.py
example/: 1-Ç°ÖÐºóÌ¨·ÑÓÃÊý¾Ý²ð·Ö.ipynb  2-ÌØ¶¨²¿ÃÅµÄÊÕÈë¡¢ÆäËûÊý¾Ý²ð·Ö.ipynb  3-ÌØ¶¨²¿ÃÅÍâÎÞÒµÎñÏß¹éÊôµÄ²ð·Ö.ipynb  4-´æ»õÓ¦ÊÕÊý¾Ý²ð·Ö.ipynb
modules/: __init__.py
modules/ai_data_etl/: __init__.py
modules/ai_data_etl/flows/: __init__.py  ai_data_etl_flow.py
modules/ai_data_etl/tasks/: __init__.py  ai_data_etl_tasks.py
modules/budget_update/: __init__.py
modules/budget_update/flows/: __init__.py  budget_update_flow.py
modules/budget_update/tasks/: __init__.py  budget_update_tasks.py
modules/bus_line_cal/flows/: __init__.py  asset_detail_flow.py  (+3 more)
modules/bus_line_staging/: __init__.py  config.py  utils.py
modules/report_collection/: __init__.py
scripts/: update_and_serve.sh
utils/: __init__.py  date_utils.py
(+35 files in other folders)
